--- a/public/templates/shop/headerMenu.html
+++ b/public/templates/shop/headerMenu.html
@@ -9,8 +9,27 @@
 <div class="col-md-2">
 </div>
 
-<div class="col-md-3" id="loginDiv">
-        <a id="login">LOGIN</a>
-        <a id="signUp">sign up</a>
-        <a>My Cart</a>
+<div class="col-md-3 row authPannel">
+    <a>My Cart</a>
+    <a id="signUp">sign up</a>
+    <a id="login">LOGIN</a>
 </div>
+
+
+
+<style>
+    .authPannel > a {
+        padding-left: 10px;
+        color: black;
+        display: inline;
+        float: right;
+        float: right;
+    }
+
+    .authPannel > a:hover {
+        cursor: pointer;
+        cursor: hand;
+        color: #ba79b8;
+        text-decoration: none;
+    }
+</style>
